# benzaiten

./: .arcconfig  .arclint  .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  conduit.py  dev_requirements.txt  docker-compose.yml  dockerhub.py  hooks.json  pyproject.toml  python.sh  requirements.txt  setup.cfg
benzaiten/: conduit.py  dockerhub.py  dockerhub.sh  hooks.json  webactivity.py
examples/: commit_webhook.json  dockerhub_webhook.json  task_webhook.json
src/: main.rs
webhook examples/: differential_webhook.json
